gatekeeper/library/workspace-object-quota/samples/load-balancer-quota/example.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-blue-app-service
  namespace: iris-blue-apps
spec:
  selector:
    app: example
  ports:
    - port: 8765
      targetPort: 9376
  type: LoadBalancer
