gatekeeper/library/workspace-object-quota/samples/load-balancer-quota/example_inventory_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    tmc.cloud.vmware.com/workspace: iris-blue
  name: iris-blue-apps
